# glucose-agent

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  glucose_buddy.db  main.py  main_complex.py  main_no_db.py  main_working_saving.py  pyproject.toml  requirements.txt
backend/glucose_agent/: __init__.py  agents.py  analytics.py  parser.py  repository.py  schemas.py  service.py  settings.py
backend/tests/: test_parser.py  test_repository.py  test_service.py
client/glucose_doc_client/: Dockerfile  package.json  tailwind.config.js  vite.config.ts
client/glucose_doc_client/src/: app.css
client/glucose_doc_client/src/routes/: +layout.svelte  +page.svelte
client/glucose_doc_client/src/routes/history/: +page.svelte
client/glucose_doc_client/src/routes/stats/: +page.svelte
